Navigate from home to questions page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
     </head>
     <body>
         <p>Good Going</p>
-        <a class="count1">Count of each array</a>
-        <p class="count2">Sum of each element in array</p>
-        <script src="Count.js"></script>
+        <a href="Q1/q1.html">Block Colour Toggle</a>    
     </body>
 </html>
