reduce methode questions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <p>Good Going</p>
-        <a href="Q1/q1.html">Block Colour Toggle</a>    
+        <a href="Q1/q1.html">Block Colour Toggle</a>  
+        <a href="Q3/q3.html">Reduce Javascript function</a>  
     </body>
 </html>
